--- a/projects/CustomerFollowUpClient/pom.xml
+++ b/projects/CustomerFollowUpClient/pom.xml
@@ -49,11 +49,12 @@
             <version>1.0.1.Final</version>
         </dependency>
 
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.9</version>
-        </dependency>
+		<!-- For H2 DB -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId> 
+			<version>1.3.166</version>
+		</dependency>
 
     </dependencies>
 
