--- a/projects/CustomerFollowUpClient/src/main/resources/process-client.properties
+++ b/projects/CustomerFollowUpClient/src/main/resources/process-client.properties
@@ -2,5 +2,5 @@ deployment.id=org.jboss.demo:customer-follow-up:1.0
 process.id=CustomerFollowUp
 application.context=http://localhost:8080/business-central
 ##application.context=http://10.13.63.227:8080/business-central
-user.id=luis
-user.password=luis1111!
+user.id=erics
+user.password=bpmsuite
