--- a/projects/salesforce/src/main/fabric8/jboss.keynote2014.salesforce.properties
+++ b/projects/salesforce/src/main/fabric8/jboss.keynote2014.salesforce.properties
@@ -15,3 +15,9 @@ bpmn.baseURI = http://localhost:8080/business-central/
 
 db.true = 1
 db.false = 0
+
+salesforce.email = clin@redhat.com
+salesforce.mobilePhone = 886983186479
+salesforce.firstName = Christina
+salesforce.lastName = Lin
+salesforce.dept = mkt
